--- a/css.html
+++ b/css.html
@@ -6,6 +6,6 @@
     <title>babszem</title>
 </head>
 <body>
-    <img src="iamges/cssselector.webp" id="css" width="400" >
+    <img src="images/cssselector.webp" id="css" width="600" >
 </body>
 </html>
