--- a/css.html
+++ b/css.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>babszem</title>
+    <title>CSS Selector</title>
 </head>
 <body>
-    <img src="images/cssselector.webp" id="css" width="600" >
+    <img src="images/cssselector.webp" alt="cssselector" title="cssselector" width="600" >
 </body>
 </html>
